<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_weibo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="#A29FA0"
        android:drawableTop="@drawable/ic_share_weibo"
        android:drawablePadding="11.5dp"
        android:text="@string/weibo"
        />

    <TextView
        android:id="@+id/tv_weixin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="#A29FA0"
        android:drawableTop="@drawable/ic_share_weixin"
        android:drawablePadding="11.5dp"
        android:text="@string/weixin"
        />

    <TextView
        android:id="@+id/tv_moments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="#A29FA0"
        android:drawableTop="@drawable/ic_share_moments"
        android:drawablePadding="11.5dp"
        android:text="@string/moments"
        />

    <TextView
        android:id="@+id/tv_qq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="#A29FA0"
        android:drawableTop="@drawable/ic_share_qq"
        android:drawablePadding="11.5dp"
        android:text="@string/qq"
        />

    <TextView
        android:id="@+id/tv_qq_zone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:textColor="#A29FA0"
        android:drawableTop="@drawable/ic_share_qq_zone"
        android:drawablePadding="11.5dp"
        android:text="@string/qq_zone"
        />

</LinearLayout>