<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorUiBackgroud"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/id_draw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/me_login_candraw_title"
            android:textColor="@color/colorTopPanelText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/id_draw_opr"
            android:layout_width="68dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_text_bigcorner_gray"
            android:gravity="center"
            android:text="@string/me_login_draw"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/id_draw_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/id_draw_title"
            android:text="@string/me_login_candraw_title"
            android:textColor="@color/colorTopPanelTip"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D5D5D5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <com.sina.shopguide.view.VerDoubleTextView
            android:id="@+id/id_month_earn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            app:dcontent="@string/me_login_earn_month"
            android:layout_weight="1" />

        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_marginTop="27dp"
            android:background="#D5D5D5" />

        <com.sina.shopguide.view.VerDoubleTextView
            android:id="@+id/id_today_earn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            app:dcontent="@string/me_login_earn_today"
            android:layout_weight="1" />

        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_marginTop="27dp"
            android:background="#D5D5D5" />

        <com.sina.shopguide.view.VerDoubleTextView
            android:id="@+id/id_mygroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            app:dcontent="@string/me_login_earn_group"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D5D5D5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <com.sina.shopguide.view.VerImageTextView
            android:id="@+id/id_earn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:iimage="@drawable/ic_earn_gray"
            app:iimage_enable="@drawable/ic_earn"
            app:icontent="@string/me_login_earn"
            android:layout_weight="1" />

        <com.sina.shopguide.view.VerImageTextView
            android:id="@+id/id_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icontent="@string/me_login_group"
            app:iimage="@drawable/ic_group_gray"
            app:iimage_enable="@drawable/ic_group"
            android:layout_weight="1" />

        <com.sina.shopguide.view.VerImageTextView
            android:id="@+id/id_invate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icontent="@string/me_login_invate"
            app:iimage="@drawable/ic_invate_gray"
            app:iimage_enable="@drawable/ic_invate"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
